completed tyousen6 and change file name

--- a/3.3/imageprocess.html
+++ b/3.3/imageprocess.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<applet code="ImageProcess" width=500 height=1100>
+<applet code="Process" width=1200 height=900>
 </applet>
 </body>
 </html>
