completed tyousen7 and learned how to rebase git commits

--- a/3.3/imageprocess.html
+++ b/3.3/imageprocess.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<applet code="Process" width=1200 height=900>
+<applet code="ImageProcess" width=1200 height=900>
 </applet>
 </body>
 </html>
